Fix (hopefully) flicker issue with page transitions.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,3 +4,8 @@
 .text-align-right {
   text-align: right;
 }
+
+/* Remove flicker on Android / WebKit  */
+.ui-page {
+    -webkit-backface-visibility: hidden !important;
+}
